--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,7 +3,11 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/admin.css' />
-    
+    <script type = "text/JavaScript">
+      function AutoRefresh( t ) {
+         setTimeout("location.reload(true);", t);
+      }
+</script>
   </head>
   <body onload = "JavaScript:AutoRefresh(10000);">
     <h1><%= title %></h1>
